# droidpad-companion

./: .editorconfig  .rustfmt.toml  Cargo.toml  README.md
example/: generic.yaml  media.yaml
examples/: generic.yaml  media.yaml
src/: actions.rs  config.rs  droidpad.rs  exec.rs  main.rs
