[package]
name = "droidpad-companion"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
tungstenite = "0.28.0"
